@@ -473,6 +473,8 @@ S3method("[[", hhh4simslist)
 S3method(plot, hhh4simslist)
 export(plotHHH4sims_size)
 export(plotHHH4sims_time)
+S3method(scores, hhh4sims)
+S3method(scores, hhh4simslist)
 
 ## backwards-compatibility for old class name "ah4"
 S3method(print, ah4)
