@@ -4,14 +4,18 @@
 \alias{plot.hhh4simslist}
 \alias{plotHHH4sims_size}
 \alias{plotHHH4sims_time}
+\alias{scores.hhh4sims}
+\alias{scores.hhh4simslist}
 
 \title{
-Plot Simulations from \code{"hhh4"} Models in Various Dimensions
+Summarize Simulations from \code{"hhh4"} Models
 }
 
 \description{
 Arrays of simulated counts from \code{\link{simulate.hhh4}} can be
 visualized in various levels of aggregation: final size, time series.
+Furthermore, proper scoring rules can be calculated based on the
+simulated predictive distributions.
 }
 
 \usage{
@@ -27,6 +31,9 @@ plotHHH4sims_time(x, average = mean, individual = length(x) == 1,
     conf.level = if (individual) 0.95 else NULL,
     matplot.args = list(), initial.args = list(), legend = length(x) > 1,
     xlim = NULL, ylim = NULL, add = FALSE, ...)
+
+\method{scores}{hhh4sims}(x, which = "rps", units = NULL, ..., drop = TRUE)
+\method{scores}{hhh4simslist}(x, ...)
 }
 
 \arguments{
@@ -98,6 +105,20 @@ plotHHH4sims_time(x, average = mean, individual = length(x) == 1,
     a logical indicating if the (mean) simulated time series should be
     added to an existing plot.
   }
+
+  \item{which}{
+    a character vector indicating which proper scoring rules to compute.
+    By default, only the ranked probability score (\code{"rps"}) is
+    calculated. Other options include \code{"logs"} and \code{"dss"}.
+  }
+  \item{units}{
+    if non-\code{NULL}, an integer or character vector indexing the
+    columns of \code{x} to compute the scores for that subset only.
+  }
+  \item{drop}{
+    a logical indicating if univariate dimensions should be dropped
+    (the default).
+  }
 }
 
 %% \value{
@@ -108,6 +129,26 @@ plotHHH4sims_time(x, average = mean, individual = length(x) == 1,
 }
 
 \examples{
+### univariate example
+data("salmAllOnset")
+
+## fit a hhh4 model to the first 13 years
+salmModel <- list(end = list(f = addSeason2formula(~1 + t)),
+                  ar = list(f = ~1), family = "NegBin1", subset = 2:678)
+salmFit <- hhh4(salmAllOnset, salmModel)
+
+## simulate the next 20 weeks ahead
+salmSims <- simulate(salmFit, nsim = 300, seed = 3, subset = 678 + seq_len(20),
+                     y.start = observed(salmAllOnset)[678,])
+
+## compare final size distribution to observed value
+plot(salmSims)
+
+## simulated time series
+plot(salmSims, type = "time", main = "2-weeks-ahead simulation")
+
+
+### multivariate example
 data("measlesWeserEms")
 
 ## fit a hhh4 model to the first year
@@ -138,6 +179,11 @@ plot(measlesSims)
 
 ## simulated time series
 plot(measlesSims, type = "time", individual = TRUE, ylim = c(0, 80))
+
+## compare proper scoring rules for a specific subset of the regions
+measlesScores5 <- scores(measlesSims, which = "rps",
+                         units = substr(colnames(measlesWeserEms), 4, 4) == "5")
+sapply(measlesScores5, mean)
 }
 
 \keyword{hplot}
